Fix issue Make the new Tumblr authorization error handling optional
- As the new way of handling authorization errors is still experimental, the user can choose now if he wants the app to fail or automatically try to continue.

--- a/src/TumblThree/TumblThree.Presentation/Views/SettingsView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/SettingsView.xaml
@@ -2427,6 +2427,23 @@
                                 </StackPanel>
                             </Grid>
                         </GroupBox>
+                        <GroupBox Header="Crawler" Grid.Row="1" Grid.ColumnSpan="4" Margin="5">
+                            <CheckBox x:Name="checkBoxTumblrAuthErrorAutoRetry"
+                                    Grid.Row="0"
+                                    Grid.Column="0"
+                                    Margin="5"
+                                    Content="{x:Static p:Resources.TumblrAuthErrorAutoRetry}"
+                                    IsChecked="{Binding TumblrAuthErrorAutoRetry, Mode=TwoWay}">
+                                <CheckBox.ToolTip>
+                                    <ToolTip>
+                                        <StackPanel>
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipTumblrAuthErrorAutoRetry}" />
+                                            <TextBlock Text="{x:Static p:Resources.ToolTipTumblrAuthErrorAutoRetryDescription}" />
+                                        </StackPanel>
+                                    </ToolTip>
+                                </CheckBox.ToolTip>
+                            </CheckBox>
+                        </GroupBox>
                     </Grid>
                 </TabItem>
             </TabControl>
